# pisama-claude-code

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
demo/: README.md  demo-simulated.sh  demo.cast  record-demo.sh
src/pisama_claude_code/: __init__.py  adapter.py  cli.py  guardian.py  install.py  lite.py  lite_config.py  lite_storage.py  otel_export.py  storage.py  trace_converter.py  trace_types.py
src/pisama_claude_code/hooks/: __init__.py  capture_hook.py  guardian_hook.py
src/pisama_claude_code/sample_traces/: __init__.py  demo_loop.jsonl
tests/: __init__.py  conftest.py  test_adapter.py  test_cli.py  test_guardian.py  test_lite.py  test_storage.py
