[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pisama-claude-code"
version = "0.3.3"
description = "Trace capture for Claude Code sessions - sync to PISAMA platform for analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tuomo Nikulainen" }
]
maintainers = [
    { name = "PISAMA Team", email = "team@pisama.dev" }
]
keywords = [
    "claude",
    "claude-code",
    "anthropic",
    "pisama",
    "llm",
    "ai-agent",
    "agent",
    "observability",
    "tracing",
    "monitoring",
    "self-healing",
    "forensics",
    "debugging",
    "developer-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
core = [
    "pisama-core>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
all = [
    "pisama-claude-code[core]",
]

[project.scripts]
pisama-cc = "pisama_claude_code.cli:main"

[project.urls]
Homepage = "https://pisama.dev"
Documentation = "https://pisama.dev/docs/claude-code"
Repository = "https://github.com/tn-pisama/pisama-claude-code"
Issues = "https://github.com/tn-pisama/pisama-claude-code/issues"
Changelog = "https://github.com/tn-pisama/pisama-claude-code/blob/main/CHANGELOG.md"
Discussions = "https://github.com/tn-pisama/pisama-claude-code/discussions"

[tool.hatch.build.targets.wheel]
packages = ["src/pisama_claude_code"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
